[package]
name = "iyke-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Ikenga desktop app's Iyke localhost control bridge"
authors = ["Royalti"]

[[bin]]
name = "iyke"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ureq = { version = "2", features = ["json"] }
dirs = "5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
